# lib-HCICore

./: .gitmodules  CMakeLists.txt  CMakeLists_.txt  main.cpp
include/: BDAddress.h  BLEScan.h
include/HCI_LE_MetaEvents/: GAPCodesList.h  GAPDataFrame.h  GATTServices.h  HCI_LE_AdvertisingReportEvent.h  LEMetaEvent.h
src/: BDAddress.cpp  BLEScan.cpp
src/HCI_LE_MetaEvents/: GAPDataFrame.cpp  HCI_LE_AdvertisingReportEvent.cpp
